--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1,  height=device-height, target-densitydpi=device-dpi">
   <title>Title</title>
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.7.94/css/materialdesignicons.css" type="text/css" charset="utf-8">
-  <link rel="stylesheet" href="https://cdn.webix.com/edge/webix.css" type="text/css">
-  <script src="https://cdn.webix.com/edge/webix.js" type="text/javascript"></script>
-  <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.7.94/css/materialdesignicons.css" type="text/css" charset="utf-8">
+  <link rel="stylesheet" href="webix/codebase/webix.css" type="text/css">
+  <script src="webix/codebase/webix.js" type="text/javascript"></script>
   <link rel="stylesheet" href="css/style.css" type="text/css" charset="utf-8">
 
 </head>
 <body>
 
-<script src="js/layout.js"></script>
+<script src="js/data.js"></script>
+<script src="js/customizePage.js"></script>
+<script src="js/startWorkoutPage.js"></script>
+<script src="js/exercisesPage.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
