exercises list , renamed css styles

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <script src="js/customizePage.js"></script>
 <script src="js/startWorkoutPage.js"></script>
 <script src="js/exercisesPage.js"></script>
+<script src="js/currentExercisePage.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
