edited registration email

--- a/emails/registration-request.html
+++ b/emails/registration-request.html
@@ -96,7 +96,7 @@
 
 <!-- start preheader -->
 <div class="preheader" style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;">
-  Confirm your email and create your VP Trainers account
+  Confirm your email and create VP Trainers account
 </div>
 <!-- end preheader -->
 
@@ -166,7 +166,7 @@
         <!-- start copy -->
         <tr>
           <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-            <p style="margin: 0;">Hey Trainee, our <a href="https://www.VPTrainers.com" target="_blank">VP Trainers</a> team received an account registration request for your email. You should confirm it to complete registration.</p>
+            <p style="margin: 0;">Hey Trainee, our <a href="https://www.VPTrainers.com" target="_blank" style="color: #FF6400;">VP Trainers</a> team received an account registration request for your email. You should confirm it to complete registration.</p>
             <p style="margin: 0; padding-top: 25px;">After confirmation your VPTrainers account will be created immediately and you can start personalized workout.</p>
             <p style="margin: 0; padding-top: 25px;">Tap the button below to confirm your email address.</p>
           </td>
@@ -197,7 +197,7 @@
         <tr>
           <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
             <p style="margin: 0;">If that doesn't work, copy and paste the following link in your browser:</p>
-            <p style="margin: 0;"><a href="http://192.168.10.62/api/Custom/Process?actionName=vptUserRegistrationConfirmation&RegistrationGUID={{RegistrationGUID}}" target="_blank">http://192.168.10.62/api/Custom/Process?actionName=vptUserRegistrationConfirmation&RegistrationGUID={{RegistrationGUID}}</a></p>
+            <p style="margin: 0;"><a href="http://192.168.10.62/api/Custom/Process?actionName=vptUserRegistrationConfirmation&RegistrationGUID={{RegistrationGUID}}" target="_blank" style="color: #FF6400;">http://192.168.10.62/api/Custom/Process?actionName=vptUserRegistrationConfirmation&RegistrationGUID={{RegistrationGUID}}</a></p>
           </td>
         </tr>
         <!-- end copy -->
@@ -206,7 +206,7 @@
         <tr>
           <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
             <p style="margin: 0;">If this email was sent to you by mistake, ignore it and the Registration Request will expire automatically in 24 hours.</p>
-            <p style="margin: 0; padding-top: 30px;">If you have any questions do not hesitate to contact our Customer Service at <a href="mailto:support@Trainers.com" target="_blank">support@VPTrainers.com</a></p>
+            <p style="margin: 0; padding-top: 30px;">If you have any questions do not hesitate to contact our Customer Service at <a href="mailto:support@Trainers.com" target="_blank" style="color: #FF6400;">support@VPTrainers.com</a></p>
           </td>
         </tr>
         <!-- end copy -->
