--- a/emails/registration-confirmation.html
+++ b/emails/registration-confirmation.html
@@ -1,13 +1,204 @@
-<span style="font-size:24px;line-height:50px;font-weight:bold">Dear Trainee,</span><br>
-<span style="font-size:18px;line-height:22px;font-weight:bold;color:#c10100">Your email has been confirmed and our AI and Human VP Trainers are ready to help you with Workouts Plan.</span><br>
-<br>
-Thank you for registering on <a href="https://www.VPTrainers.com" target="_blank">VPTrainers.com</a>!<br>
-To start personalized workouts, <a style="color:#0092cd;text-decoration:underline;font-weight:bold" href="https://www.VPTrainers.com" target="_blank">login</a> with your email and password.<br>
-<br>
-PLEASE DO NOT REPLY to this email. This email message was sent from a notification-only email address that cannot accept incoming emails.<br>
-<br>
-If you have any other questions, please contact customer service at: <a href="mailto:support@VPTrainers.com" target="_blank">support@VPTrainers.com</a><br>
-<br>
-Sincerely,<br>
-<span style="color:#62b400;font-weight:bold">VP Trainers Team</span><br>
-<a href="mailto:support@VPTrainers.com" target="_blank">support@VPTrainers.com</a>
+<!DOCTYPE html>
+<html>
+<head>
+
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Email Confirmation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style type="text/css">
+    /**
+     * Google webfonts. Recommended to include the .woff version for cross-client compatibility.
+     */
+    @media screen {
+      @font-face {
+        font-family: 'Source Sans Pro';
+        font-style: normal;
+        font-weight: 400;
+        src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'), url(https://fonts.gstatic.com/s/sourcesanspro/v10/ODelI1aHBYDBqgeIAH2zlBM0YzuT7MdOe03otPbuUS0.woff) format('woff');
+      }
+      @font-face {
+        font-family: 'Source Sans Pro';
+        font-style: normal;
+        font-weight: 700;
+        src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'), url(https://fonts.gstatic.com/s/sourcesanspro/v10/toadOcfmlt9b38dHJxOBGFkQc6VGVFSmCnC_l7QZG60.woff) format('woff');
+      }
+    }
+    /**
+     * Avoid browser level font resizing.
+     * 1. Windows Mobile
+     * 2. iOS / OSX
+     */
+    body,
+    table,
+    td,
+    a {
+      -ms-text-size-adjust: 100%; /* 1 */
+      -webkit-text-size-adjust: 100%; /* 2 */
+    }
+    /**
+     * Remove extra space added to tables and cells in Outlook.
+     */
+    table,
+    td {
+      mso-table-rspace: 0pt;
+      mso-table-lspace: 0pt;
+    }
+    /**
+     * Better fluid images in Internet Explorer.
+     */
+    img {
+      -ms-interpolation-mode: bicubic;
+    }
+    /**
+     * Remove blue links for iOS devices.
+     */
+    a[x-apple-data-detectors] {
+      font-family: inherit !important;
+      font-size: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      color: inherit !important;
+      text-decoration: none !important;
+    }
+    /**
+     * Fix centering issues in Android 4.4.
+     */
+    div[style*="margin: 16px 0;"] {
+      margin: 0 !important;
+    }
+    body {
+      width: 100% !important;
+      height: 100% !important;
+      padding: 0 !important;
+      margin: 0 !important;
+    }
+    /**
+     * Collapse table borders to avoid space between cells.
+     */
+    table {
+      border-collapse: collapse !important;
+    }
+    a {
+      color: #FF6400;
+    }
+    img {
+      height: auto;
+      line-height: 100%;
+      text-decoration: none;
+      border: 0;
+      outline: none;
+    }
+  </style>
+
+</head>
+<body style="background-color: #e9ecef;">
+
+<!-- start preheader -->
+<div class="preheader" style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;">
+  Dear Trainee, thank you for registering on <a href="https://www.VPTrainers.com" target="_blank" style="color: #FF6400;">VPTrainers.com</a>
+</div>
+<!-- end preheader -->
+
+<!-- start body -->
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+
+  <!-- start logo -->
+  <tr>
+    <td align="center" bgcolor="#e9ecef">
+      <!--[if (gte mso 9)|(IE)]>
+      <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
+        <tr>
+          <td align="center" valign="top" width="600">
+      <![endif]-->
+      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
+        <tr>
+          <td align="center" valign="top" style="padding: 36px 24px;">
+            <a href="https://www.VPTrainers.com" target="_blank" style="display: inline-block;">
+              <img src="http://192.168.10.62/Content/images/vpt/Logo_VPTrainers.svg" alt="VP Trainers Logo" border="0" width="200" style="display: block; width: 200px; max-width: 200px; min-width: 200px;">
+            </a>
+          </td>
+        </tr>
+      </table>
+      <!--[if (gte mso 9)|(IE)]>
+      </td>
+      </tr>
+      </table>
+      <![endif]-->
+    </td>
+  </tr>
+  <!-- end logo -->
+
+  <!-- start copy block -->
+  <tr>
+    <td align="center" bgcolor="#e9ecef">
+      <!--[if (gte mso 9)|(IE)]>
+      <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
+        <tr>
+          <td align="center" valign="top" width="600">
+      <![endif]-->
+      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
+
+        <!-- start copy -->
+        <tr>
+          <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
+            <p style="margin: 0;"><b>Dear Trainee</b>, thank you for registering on <a href="https://www.VPTrainers.com" target="_blank" style="color: #FF6400;">VPTrainers.com</a>.</p>
+            <p style="margin: 0; padding-top: 25px;">Our AI and Human VP Trainers are always ready to help you with creation your own Workouts Plan. </p>
+            <p style="margin: 0; padding-top: 25px;">To start personalized workouts, please, <a style="color: #FF6400;" href="https://www.VPTrainers.com" target="_blank">login</a> with your email and password.</p>
+            <p style="margin: 0; padding-top: 30px;">If you have any questions do not hesitate to contact our Customer Service at <a href="mailto:support@Trainers.com" target="_blank" style="color: #FF6400;">support@VPTrainers.com</a></p>
+
+          </td>
+        </tr>
+        <!-- end copy -->
+
+        <!-- start copy -->
+        <tr>
+          <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
+            <p style="margin: 0;">Sincerely,<br> VP Trainers Team</p>
+          </td>
+        </tr>
+        <!-- end copy -->
+
+      </table>
+      <!--[if (gte mso 9)|(IE)]>
+      </td>
+      </tr>
+      </table>
+      <![endif]-->
+    </td>
+  </tr>
+  <!-- end copy block -->
+
+  <!-- start footer -->
+  <tr>
+    <td align="center" bgcolor="#e9ecef" style="padding: 24px;">
+      <!--[if (gte mso 9)|(IE)]>
+      <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
+        <tr>
+          <td align="center" valign="top" width="600">
+      <![endif]-->
+      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
+
+        <!-- start permission -->
+        <tr>
+          <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
+            <p style="margin: 0;">PLEASE DO NOT REPLY to this email. This email message was sent from a notification-only email address that cannot accept incoming emails.</p>
+          </td>
+        </tr>
+        <!-- end permission -->
+
+      </table>
+      <!--[if (gte mso 9)|(IE)]>
+      </td>
+      </tr>
+      </table>
+      <![endif]-->
+    </td>
+  </tr>
+  <!-- end footer -->
+
+</table>
+<!-- end body -->
+
+</body>
+</html>
